@@ -467,8 +467,8 @@ static const yytype_int8 yyrhs[] =
 static const yytype_uint8 yyrline[] =
 {
        0,    42,    42,    43,    44,    45,    51,    52,    56,    60,
-      61,    65,    70,    74,    75,    78,    86,    90,    92,    94,
-     105,   109,   111,   112,   113,   114,   115,   116,   117,   118
+      61,    65,    70,    74,    75,    78,    87,    92,    94,    96,
+     107,   111,   113,   114,   115,   116,   117,   118,   119,   120
 };
 #endif
 
@@ -1487,6 +1487,7 @@ yyreduce:
   case 15:
 #line 79 "reader.y"
     {
+           (yyvsp[(2) - (3)].object) = Pair::reverse((yyvsp[(2) - (3)].object));
            if ((yyvsp[(2) - (3)].object).isPair()) {
                 (yyvsp[(2) - (3)].object).toPair()->sourceInfo = Pair::list2(Object::makeString(parser_port()->toString()),
                                                       Object::makeInt(parser_port()->getLineNo()));
@@ -1496,26 +1497,27 @@ yyreduce:
     break;
 
   case 16:
-#line 87 "reader.y"
+#line 88 "reader.y"
     {
+           (yyvsp[(2) - (6)].object) = Pair::reverse((yyvsp[(2) - (6)].object));
            (yyval.object) = Pair::appendD2((yyvsp[(2) - (6)].object), Object::cons((yyvsp[(3) - (6)].object), (yyvsp[(5) - (6)].object)));
        ;}
     break;
 
   case 17:
-#line 90 "reader.y"
+#line 92 "reader.y"
     { (yyval.object) = Object::cons((yyvsp[(1) - (2)].object), Object::cons((yyvsp[(2) - (2)].object), Object::Nil)); ;}
     break;
 
   case 18:
-#line 92 "reader.y"
-    { (yyval.object) = Object::makeVector((yyvsp[(2) - (3)].object)); ;}
+#line 94 "reader.y"
+    { (yyval.object) = Object::makeVector(Pair::reverse((yyvsp[(2) - (3)].object))); ;}
     break;
 
   case 19:
-#line 95 "reader.y"
+#line 97 "reader.y"
     {
-              const Object bytevector = u8ListToByteVector((yyvsp[(2) - (3)].object));
+              const Object bytevector = u8ListToByteVector(Pair::reverse((yyvsp[(2) - (3)].object)));
               if (bytevector.isNil()) {
                 yyerror("malformed bytevector literal #vu8(...)");
                 YYERROR;
@@ -1526,60 +1528,60 @@ yyreduce:
     break;
 
   case 20:
-#line 106 "reader.y"
+#line 108 "reader.y"
     {
-               (yyval.object) = Pair::appendD2((yyvsp[(1) - (2)].object), Pair::list1((yyvsp[(2) - (2)].object)));
+                 (yyval.object) = Object::cons((yyvsp[(2) - (2)].object), (yyvsp[(1) - (2)].object));
            ;}
     break;
 
   case 21:
-#line 109 "reader.y"
+#line 111 "reader.y"
     {(yyval.object) = Object::Nil; ;}
     break;
 
   case 22:
-#line 111 "reader.y"
+#line 113 "reader.y"
     { (yyval.object) = Symbol::QUOTE; ;}
     break;
 
   case 23:
-#line 112 "reader.y"
+#line 114 "reader.y"
     { (yyval.object) = Symbol::UNQUOTE_SPLICING; ;}
     break;
 
   case 24:
-#line 113 "reader.y"
+#line 115 "reader.y"
     { (yyval.object) = Symbol::QUASIQUOTE; ;}
     break;
 
   case 25:
-#line 114 "reader.y"
+#line 116 "reader.y"
     { (yyval.object) = Symbol::UNQUOTE; ;}
     break;
 
   case 26:
-#line 115 "reader.y"
+#line 117 "reader.y"
     { (yyval.object) = Symbol::SYNTAX;;}
     break;
 
   case 27:
-#line 116 "reader.y"
+#line 118 "reader.y"
     { (yyval.object) = Symbol::UNSYNTAX_SPLICING; ;}
     break;
 
   case 28:
-#line 117 "reader.y"
+#line 119 "reader.y"
     { (yyval.object) = Symbol::QUASISYNTAX; ;}
     break;
 
   case 29:
-#line 118 "reader.y"
+#line 120 "reader.y"
     { (yyval.object) = Symbol::UNSYNTAX; ;}
     break;
 
 
 /* Line 1267 of yacc.c.  */
-#line 1583 "reader.tab.cpp"
+#line 1585 "reader.tab.cpp"
       default: break;
     }
   YY_SYMBOL_PRINT ("-> $$ =", yyr1[yyn], &yyval, &yyloc);
@@ -1793,7 +1795,7 @@ yyreturn:
 }
 
 
-#line 120 "reader.y"
+#line 122 "reader.y"
 
 
 extern ucs4char* token;
