@@ -1,5 +1,7 @@
 2008-10-24  higepon  <higepon@users.sourceforge.jp>
 
+        * reader.y : Not to use append for terrible bad performance.
+
         * scripts/binary2c.scm (main): Added for Fasl.
 
 2008-10-23  higepon  <higepon@users.sourceforge.jp>
